# expense_tracker

./: .gitignore  alembic.ini  main.py  package-lock.json  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 04a9b6e5b04d_initial_migration.py  b5ded1daf1ab_init_models.py  d3f9f2c34284_create_expenses_table.py  dfd87516038c_add_password_column.py  f0a9d8c7b6a5_add_email_verification.py
app/: auth.py  main.py
app/config/: database.py  mail.py
app/models/: __init__.py  expense.py  otp.py  user.py
app/routes/: auth.py  db_test.py  expense.py  user.py
app/schema/: __init__.py  expense.py  user.py
app/services/: email_service.py  expense_service.py  user_service.py
app/templates/: otp_email.html
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: auth.js  axios.js
frontend/src/components/: Button.jsx  Input.jsx
frontend/src/layout/: DashboarLayout.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  Signup.jsx
frontend/src/styles/: style.css
